--- a/20190906_td_python_IBO3.ipynb
+++ b/20190906_td_python_IBO3.ipynb
@@ -62,24 +62,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 466,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 2b06eb1] pour suivre\n",
-      " 1 file changed, 2690 insertions(+)\n",
+      "[master a555d79] pour suivre\n",
+      " 1 file changed, 1568 insertions(+), 803 deletions(-)\n",
       "Enumerating objects: 5, done.\n",
       "Counting objects: 100% (5/5), done.\n",
       "Delta compression using up to 8 threads\n",
       "Compressing objects: 100% (3/3), done.\n",
-      "Writing objects: 100% (3/3), 187.11 KiB | 14.39 MiB/s, done.\n",
-      "Total 3 (delta 1), reused 0 (delta 0)\n",
-      "remote: Resolving deltas: 100% (1/1), completed with 1 local object.\u001b[K\n",
+      "Writing objects: 100% (3/3), 8.87 KiB | 1.77 MiB/s, done.\n",
+      "Total 3 (delta 2), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "To https://github.com/romainjouin/esilv_5a.git\n",
-      "   b589101..2b06eb1  master -> master\n"
+      "   2b06eb1..a555d79  master -> master\n"
      ]
     }
    ],
@@ -3705,6 +3705,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7.3) recherchons l'auteur probable d'un texte"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 441,
    "metadata": {},
@@ -3732,8 +3739,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## La fonction applymap s'applique élément par élément dans une dataFrame"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": 467,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3742,7 +3756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 465,
+   "execution_count": 468,
    "metadata": {},
    "outputs": [
     {
@@ -3763,7 +3777,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 465,
+     "execution_count": 468,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3771,20 +3785,6 @@
    "source": [
     "_.sort_values(ascending=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
