--- a/TD2_webscrapping.ipynb
+++ b/TD2_webscrapping.ipynb
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
     "    for cmd in cmds:\n",
     "        print(cmd)\n",
     "        cmd = cmd.split()\n",
-    "        if \"commit\" not in cmd: \n",
+    "        if \"commit\" in cmd: \n",
     "            cmd.append( f\"'{message}'\") \n",
     "        subprocess.check_output(cmd)\n",
     "        \n"
@@ -184,7 +184,29 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "IPython.notebook.save_checkpoint();"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "git add .\n",
+      "git commit -m \n",
+      "git push origin master\n"
+     ]
+    }
+   ],
    "source": [
     "push()"
    ]
