--- a/TD2_webscrapping.ipynb
+++ b/TD2_webscrapping.ipynb
@@ -156,20 +156,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def push(message=\"pour suivre\"):\n",
+    "def push(message):\n",
+    "    \"\"\"\n",
+    "    Save current notebook and push whole current dir to origin/master\n",
     "    \n",
+    "    Param:\n",
+    "        message : commit's message\n",
+    "    \n",
+    "    Return:\n",
+    "        None\n",
+    "    \"\"\"\n",
+    "    assert(len())\n",
     "    import subprocess\n",
     "    from IPython.display import display, Javascript\n",
-    "    \n",
     "    \n",
     "    cmds = [  \"git add .\",\n",
     "              \"git commit -m \", \n",
     "              \"git push origin master\"]\n",
     "    \n",
+    "    # save current notebook\n",
     "    display(Javascript('IPython.notebook.save_checkpoint();'))\n",
     "    for cmd in cmds:\n",
     "        print(cmd)\n",
@@ -182,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +217,7 @@
     }
    ],
    "source": [
-    "push()"
+    "push(\"\")"
    ]
   },
   {
