'Optimisation de la fonction push'

--- a/TD2_webscrapping.ipynb
+++ b/TD2_webscrapping.ipynb
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
     "    Return:\n",
     "        None\n",
     "    \"\"\"\n",
-    "    assert(len())\n",
+    "    assert(len(message.strip())>10)\n",
     "    import subprocess\n",
     "    from IPython.display import display, Javascript\n",
     "    \n",
@@ -191,33 +191,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "IPython.notebook.save_checkpoint();"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "git add .\n",
-      "git commit -m \n",
-      "git push origin master\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "push(\"\")"
+    "push(\"Optimisation de la fonction push\")"
    ]
   },
   {
