'added clean_mot because unicode couldn't be installed.'

--- a/TD2_webscrapping.ipynb
+++ b/TD2_webscrapping.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
        "200"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,16 +164,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'<!DOCTYPE html PUBLIC \"-//W3C//DTD XHTML 1.0 Transitional//EN\" \"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd\">\\n<html xmlns=\"http://www.w3.org/1999/xhtml\">\\n\\n<head>\\n    <!--BENCH_start = (1.1920928955078E-6, 3.814697265625E-5) -->\\n<meta name=\"description\" content=\"Infoclimat, la m&eacute;t&eacute;o en France en temps r&eacute;el - Weather in realtime Europe, Canada\" /><meta name=\"keywords\" content=\"infoclimat, meteo en direct, france, europe, live, observation meteo, climatologie, gfs, '"
+       "'<!DOCTYPE html PUBLIC \"-//W3C//DTD XHTML 1.0 Transitional//EN\" \"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd\">\\n<html xmlns=\"http://www.w3.org/1999/xhtml\">\\n\\n<head>\\n    <!--BENCH_start = (9.5367431640625E-7, 3.2901763916016E-5) -->\\n<meta name=\"description\" content=\"Infoclimat, la m&eacute;t&eacute;o en France en temps r&eacute;el - Weather in realtime Europe, Canada\" /><meta name=\"keywords\" content=\"infoclimat, meteo en direct, france, europe, live, observation meteo, climatologie, gfs,'"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
        "bs4.BeautifulSoup"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "<title>Paris-Montsouris (Paris - France) | Archives des relevés météo du samedi 7 septembre 2019 - Infoclimat</title>"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "'Paris-Montsouris (Paris - France) | Archives des relevés météo du samedi 7 septembre 2019 - Infoclimat'"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        "19"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
        " <td style=\"background-color:rgba(0,0,0,0.1)\">20 <span class=\"tab-units-v\">km</span></td>]"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,27 +317,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'tr.cdata-hour17 td'"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "hour = 16\n",
-    "selector"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -346,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -381,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,46 +370,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting unidecode\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/d0/42/d9edfed04228bacea2d824904cae367ee9efd05e6cce7ceaaedd0b0ad964/Unidecode-1.1.1-py2.py3-none-any.whl (238kB)\n",
-      "\u001b[K     |████████████████████████████████| 245kB 376kB/s eta 0:00:01\n",
-      "\u001b[?25hInstalling collected packages: unidecode\n",
-      "Successfully installed unidecode-1.1.1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install unidecode"
+    "def clean_mot(mot):\n",
+    "    replace = { \"e\" : [\"é\", \"è\", \"ë\"]  \n",
+    "        \n",
+    "    }\n",
+    "    for to_put, to_change in replace.items(): \n",
+    "        for car in to_change:\n",
+    "            mot = mot.replace(car, to_put)\n",
+    "    return mot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'unidecode'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-104-28a5da8da341>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0munidecode\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0muni\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mmonths_formatted\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0muni\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munidecode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmonths\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mmonths_formatted\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'unidecode'"
-     ]
+     "data": {
+      "text/plain": [
+       "['janvier',\n",
+       " 'fevrier',\n",
+       " 'mars',\n",
+       " 'avril',\n",
+       " 'mai',\n",
+       " 'juin',\n",
+       " 'juillet',\n",
+       " 'août',\n",
+       " 'septembre',\n",
+       " 'octobre',\n",
+       " 'novembre',\n",
+       " 'decembre']"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import unidecode as uni\n",
-    "months_formatted = list(map(lambda x: uni.unidecode(x).lower(), months))\n",
+    "months_formatted = list(map(lambda x: clean_mot(x).lower(), months))\n",
     "months_formatted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "push(\"added clean_mo\")"
    ]
   },
   {
