'ai explicité la fonctoin lambda f avec des noms explicites et des sous fonctions paramétrables'

--- a/TD2_webscrapping.ipynb
+++ b/TD2_webscrapping.ipynb
@@ -563,6 +563,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "IPython.notebook.save_checkpoint();"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "git add .\n",
+      "git commit -m 'Modification de scrap_better_weather_data pour renvoyer un dico avec des clefs : annee-mois'\n",
+      "git push origin master\n"
+     ]
+    }
+   ],
+   "source": [
+    "push(\"Modification de scrap_better_weather_data pour renvoyer un dico avec des clefs : annee-mois\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 49,
    "metadata": {},
    "outputs": [
@@ -601,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,38 +641,410 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
-    "HTML2 = list(map(f_, HTML))"
+    "\n",
+    "def get_hour_and_temp_at_10h(html): \n",
+    "    hour=10\n",
+    "    return get_hour_and_temp(html, hour)\n",
+    "\n",
+    "def get_hour_and_temp_at_17h(html): \n",
+    "    hour=17\n",
+    "    return get_hour_and_temp(html, hour)\n",
+    "    \n",
+    "def get_hour_and_temp(html, hour):\n",
+    "    selector     = f'tr.cdata-hour{hour} td'\n",
+    "    selected     = BeautifulSoup(html, 'html.parser').select(selector)\n",
+    "    one_out_of_2 = selected[0:4:2] # hour and temperature\n",
+    "    \n",
+    "    return [x.text for x in one_out_of_2]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f_ = get_hour_and_temp_at_17h\n",
+    "f_ = get_hour_and_temp_at_10h"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HTML2 = list(map(f_, dico.values()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dico2 = {k : f_(dico[k]) for k in dico}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['18h', '-0.6 °C'],\n",
-       " ['19h', '16.7 °C'],\n",
-       " ['19h', '20.4 °C'],\n",
-       " ['19h', '15.3 °C'],\n",
-       " ['18h', '8.6 °C'],\n",
-       " ['19h', '11.1 °C'],\n",
-       " ['19h', '30.3 °C'],\n",
-       " ['19h', '13.4 °C']]"
+       "{'2017/janvier': ['11h', '-3.0 °C'],\n",
+       " '2017/avril': ['12h', '12.1 °C'],\n",
+       " '2017/juillet': ['12h', '16.1 °C'],\n",
+       " '2017/octobre': ['12h', '14.4 °C'],\n",
+       " '2018/janvier': ['11h', '7.3 °C'],\n",
+       " '2018/avril': ['12h', '9.1 °C'],\n",
+       " '2018/juillet': ['12h', '29.9 °C'],\n",
+       " '2018/octobre': ['12h', '13.3 °C']}"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "HTML2"
+    "dico2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_temp_for_whole_day(html):\n",
+    "    return [ get_hour_and_temp(html, hour) for hour in range(25)]\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dico3 = {k : get_temp_for_whole_day(dico[k]) for k in dico}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'2017/janvier': [[],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  ['11h', '-3.0 °C'],\n",
+       "  ['12h', '-2.1 °C'],\n",
+       "  ['13h', '-1.5 °C'],\n",
+       "  ['14h', '-1.0 °C'],\n",
+       "  ['15h', '-0.8 °C'],\n",
+       "  ['16h', '-0.8 °C'],\n",
+       "  ['17h', '-0.6 °C'],\n",
+       "  ['18h', '-0.6 °C'],\n",
+       "  ['19h', '-0.6 °C'],\n",
+       "  ['20h', '-0.6 °C'],\n",
+       "  ['21h', '-0.5 °C'],\n",
+       "  ['22h', '-0.4 °C'],\n",
+       "  ['23h', '-0.1 °C'],\n",
+       "  ['00h', '0.2 °C'],\n",
+       "  []],\n",
+       " '2017/avril': [[],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  ['12h', '12.1 °C'],\n",
+       "  ['13h', '13.1 °C'],\n",
+       "  ['14h', '14.2 °C'],\n",
+       "  ['15h', '14.9 °C'],\n",
+       "  ['16h', '15.6 °C'],\n",
+       "  ['17h', '16.8 °C'],\n",
+       "  ['18h', '16.8 °C'],\n",
+       "  ['19h', '16.7 °C'],\n",
+       "  ['20h', '15.1 °C'],\n",
+       "  ['21h', '13.5 °C'],\n",
+       "  ['22h', '12.3 °C'],\n",
+       "  ['23h', '12.3 °C'],\n",
+       "  ['00h', '11.8 °C'],\n",
+       "  ['01h', '11.6 °C'],\n",
+       "  []],\n",
+       " '2017/juillet': [[],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  ['12h', '16.1 °C'],\n",
+       "  ['13h', '15.5 °C'],\n",
+       "  ['14h', '15.5 °C'],\n",
+       "  ['15h', '17.0 °C'],\n",
+       "  ['16h', '17.4 °C'],\n",
+       "  ['17h', '17.9 °C'],\n",
+       "  ['18h', '19.0 °C'],\n",
+       "  ['19h', '20.4 °C'],\n",
+       "  ['20h', '21.0 °C'],\n",
+       "  ['21h', '19.9 °C'],\n",
+       "  ['22h', '18.4 °C'],\n",
+       "  ['23h', '18.4 °C'],\n",
+       "  ['00h', '17.5 °C'],\n",
+       "  ['01h', '16.4 °C'],\n",
+       "  []],\n",
+       " '2017/octobre': [[],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  ['12h', '14.4 °C'],\n",
+       "  ['13h', '14.5 °C'],\n",
+       "  ['14h', '14.7 °C'],\n",
+       "  ['15h', '15.3 °C'],\n",
+       "  ['16h', '15.3 °C'],\n",
+       "  ['17h', '15.4 °C'],\n",
+       "  ['18h', '15.3 °C'],\n",
+       "  ['19h', '15.3 °C'],\n",
+       "  ['20h', '15.1 °C'],\n",
+       "  ['21h', '14.9 °C'],\n",
+       "  ['22h', '14.8 °C'],\n",
+       "  ['23h', '14.9 °C'],\n",
+       "  ['00h', '15.1 °C'],\n",
+       "  ['01h', '15.4 °C'],\n",
+       "  []],\n",
+       " '2018/janvier': [[],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  ['11h', '7.3 °C'],\n",
+       "  ['12h', '7.1 °C'],\n",
+       "  ['13h', '8.2 °C'],\n",
+       "  ['14h', '8.9 °C'],\n",
+       "  ['15h', '9.4 °C'],\n",
+       "  ['16h', '8.9 °C'],\n",
+       "  ['17h', '9.4 °C'],\n",
+       "  ['18h', '8.6 °C'],\n",
+       "  ['19h', '8.7 °C'],\n",
+       "  ['20h', '8.2 °C'],\n",
+       "  ['21h', '7.3 °C'],\n",
+       "  ['22h', '7.8 °C'],\n",
+       "  ['23h', '7.7 °C'],\n",
+       "  ['00h', '7.6 °C'],\n",
+       "  []],\n",
+       " '2018/avril': [[],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  ['12h', '9.1 °C'],\n",
+       "  ['13h', '9.1 °C'],\n",
+       "  ['14h', '9.9 °C'],\n",
+       "  ['15h', '10.4 °C'],\n",
+       "  ['16h', '10.8 °C'],\n",
+       "  ['17h', '11.6 °C'],\n",
+       "  ['18h', '11.0 °C'],\n",
+       "  ['19h', '11.1 °C'],\n",
+       "  ['20h', '10.4 °C'],\n",
+       "  ['21h', '9.5 °C'],\n",
+       "  ['22h', '9.1 °C'],\n",
+       "  ['23h', '9.2 °C'],\n",
+       "  ['00h', '9.3 °C'],\n",
+       "  ['01h', '8.8 °C'],\n",
+       "  []],\n",
+       " '2018/juillet': [[],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  ['12h', '29.9 °C'],\n",
+       "  ['13h', '31.4 °C'],\n",
+       "  ['14h', '32.2 °C'],\n",
+       "  ['15h', '33.4 °C'],\n",
+       "  ['16h', '31.7 °C'],\n",
+       "  ['17h', '30.5 °C'],\n",
+       "  ['18h', '30.9 °C'],\n",
+       "  ['19h', '30.3 °C'],\n",
+       "  ['20h', '29.9 °C'],\n",
+       "  ['21h', '29.0 °C'],\n",
+       "  ['22h', '28.4 °C'],\n",
+       "  ['23h', '27.6 °C'],\n",
+       "  ['00h', '26.4 °C'],\n",
+       "  ['01h', '25.6 °C'],\n",
+       "  []],\n",
+       " '2018/octobre': [[],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  [],\n",
+       "  ['12h', '13.3 °C'],\n",
+       "  ['13h', '13.6 °C'],\n",
+       "  ['14h', '14.4 °C'],\n",
+       "  ['15h', '14.7 °C'],\n",
+       "  ['16h', '15.1 °C'],\n",
+       "  ['17h', '15.1 °C'],\n",
+       "  ['18h', '14.7 °C'],\n",
+       "  ['19h', '13.4 °C'],\n",
+       "  ['20h', '12.6 °C'],\n",
+       "  ['21h', '11.5 °C'],\n",
+       "  ['22h', '11.5 °C'],\n",
+       "  ['23h', '11.5 °C'],\n",
+       "  ['00h', '11.2 °C'],\n",
+       "  ['01h', '10.9 °C'],\n",
+       "  []]}"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dico3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>2017/janvier</th>\n",
+       "      <th>2017/avril</th>\n",
+       "      <th>2017/juillet</th>\n",
+       "      <th>2017/octobre</th>\n",
+       "      <th>2018/janvier</th>\n",
+       "      <th>2018/avril</th>\n",
+       "      <th>2018/juillet</th>\n",
+       "      <th>2018/octobre</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>11h</td>\n",
+       "      <td>12h</td>\n",
+       "      <td>12h</td>\n",
+       "      <td>12h</td>\n",
+       "      <td>11h</td>\n",
+       "      <td>12h</td>\n",
+       "      <td>12h</td>\n",
+       "      <td>12h</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-3.0 °C</td>\n",
+       "      <td>12.1 °C</td>\n",
+       "      <td>16.1 °C</td>\n",
+       "      <td>14.4 °C</td>\n",
+       "      <td>7.3 °C</td>\n",
+       "      <td>9.1 °C</td>\n",
+       "      <td>29.9 °C</td>\n",
+       "      <td>13.3 °C</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  2017/janvier 2017/avril 2017/juillet 2017/octobre 2018/janvier 2018/avril  \\\n",
+       "0          11h        12h          12h          12h          11h        12h   \n",
+       "1      -3.0 °C    12.1 °C      16.1 °C      14.4 °C       7.3 °C     9.1 °C   \n",
+       "\n",
+       "  2018/juillet 2018/octobre  \n",
+       "0          12h          12h  \n",
+       "1      29.9 °C      13.3 °C  "
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(dico2)"
    ]
   },
   {
@@ -746,9 +1149,9 @@
     }
    ],
    "source": [
-    "df = pd.DataFrame({'year':YEAR,\n",
-    "              'month':MONTH,\n",
-    "              'hour and temperature':HTML2})\n",
+    "df = pd.DataFrame({ 'year' : YEAR,\n",
+    "                    'month': MONTH,\n",
+    "                    'hour and temperature':HTML2})\n",
     "df"
    ]
   },
