--- a/TD2_webscrapping.ipynb
+++ b/TD2_webscrapping.ipynb
@@ -1,37 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fusion de cellules dans jupyter  : MAJ + M"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys"
+    "import sys\n",
+    "sys.version"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'3.7.1 (default, Dec 14 2018, 13:28:58) \\n[Clang 4.0.1 (tags/RELEASE_401/final)]'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sys.version\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +68,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nouveau_nom = push"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nouveau_nom(\"message qelzkfhq\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +102,8 @@
     "    Save current notebook and push whole current dir to origin/master\n",
     "    \n",
     "    Param:\n",
-    "        message : commit's message\n",
+    "        message : str \n",
+    "            Commit's message\n",
     "    \n",
     "    Return:\n",
     "        None\n",
@@ -2235,7 +2249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2255,7 +2269,13 @@
       "scrolling number : 6 on limit : 10\n",
       "number of photos downloaded : 105\n",
       "scrolling number : 7 on limit : 10\n",
-      "number of photos downloaded : 117\n"
+      "number of photos downloaded : 117\n",
+      "scrolling number : 8 on limit : 10\n",
+      "number of photos downloaded : 129\n",
+      "scrolling number : 9 on limit : 10\n",
+      "number of photos downloaded : 141\n",
+      "scrolling number : 10 on limit : 10\n",
+      "number of photos downloaded : 153\n"
      ]
     }
    ],
@@ -2306,11 +2326,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "IPython.notebook.save_checkpoint();"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "git add .\n",
+      "git commit -m 'fin du test du td'\n",
+      "git push origin master\n"
+     ]
+    }
+   ],
    "source": [
-    "!ls"
+    "push(\"fin du test du td\")"
    ]
   },
   {
