'Optimisation de la fonction push'

--- a/TD2_webscrapping.ipynb
+++ b/TD2_webscrapping.ipynb
@@ -77,9 +77,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "IPython.notebook.save_checkpoint();"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "git add .\n",
+      "git commit -m 'message qelzkfhq'\n",
+      "git push origin master\n"
+     ]
+    }
+   ],
    "source": [
     "nouveau_nom(\"message qelzkfhq\")"
    ]
@@ -93,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
