--- a/20190906_IBO2_td_1.ipynb
+++ b/20190906_IBO2_td_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -35,8 +35,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +94,7 @@
        "[1, 2, 'a', 'b']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +115,7 @@
        "'azerhiuoxdrhdrt'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +143,7 @@
        "[1, 2, 'a', 'b']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +170,7 @@
        "2"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +191,7 @@
        "'b'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +219,7 @@
        "[2, 'a']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +253,7 @@
        "range(10, 20)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +275,7 @@
        "[10, 12, 14, 16, 18]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +296,7 @@
        "[20, 18, 16, 14, 12]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,15 +324,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 'a', 'b']\n",
-      "b,a,2,1,"
+      "[1, 2, 'a', 'b']\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'c' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-42-e08492e9dd8a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mune_liste\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\",\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'c' is not defined"
      ]
     }
    ],
@@ -346,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +422,8 @@
    ],
    "source": [
     "for indice, valeur in enumerate(hello_world):\n",
-    "    print(indice, valeur)"
+    "    print(indice, valeur)\n",
+    "    # print(f\"{indice} {valeur}\")"
    ]
   },
   {
@@ -426,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,16 +451,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([134, 189, 119, 149, 190, 138, 155, 126, 105, 141], 9.989738464355469e-05)"
+       "([113, 170, 131, 159, 139, 170, 169, 180, 154, 189], 0.00011110305786132812)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,16 +484,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([135, 100, 168, 192, 104, 183, 188, 170, 167, 179], 8.797645568847656e-05)"
+       "([171, 112, 155, 155, 193, 198, 152, 117, 111, 133], 0.00010228157043457031)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -502,10 +518,10 @@
      "text": [
       "\n",
       "----------- \n",
-      "delais_comprehension = 0.0000879765\n",
-      "delais_classique     = 0.0000998974\n",
+      "delais_comprehension = 0.0001022816\n",
+      "delais_classique     = 0.0001111031\n",
       "\n",
-      "Gain de performance  = 0.12\n",
+      "Gain de performance  = 0.08\n",
       "\n"
      ]
     }
@@ -530,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +555,7 @@
        "'----------'"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +576,7 @@
        "'-*--*--*--*--*--*--*--*--*--*-'"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +597,7 @@
        "[0, 1, 2, 0, 1, 2, 0, 1, 2, 0, 1, 2]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,15 +630,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "166 > 130 ? True\n",
-      "117 > 130 ? False\n"
+      "137 > 130 ? True\n",
+      "167 > 130 ? True\n",
+      "191 > 130 ? True\n",
+      "144 > 130 ? True\n",
+      "178 > 130 ? True\n",
+      "182 > 130 ? True\n",
+      "199 > 130 ? True\n",
+      "115 > 130 ? False\n"
      ]
     }
    ],
@@ -638,6 +660,117 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[137,\n",
+       " 146,\n",
+       " 183,\n",
+       " 145,\n",
+       " 113,\n",
+       " 139,\n",
+       " 141,\n",
+       " 153,\n",
+       " 182,\n",
+       " 178,\n",
+       " 189,\n",
+       " 177,\n",
+       " 186,\n",
+       " 131,\n",
+       " 193,\n",
+       " 140,\n",
+       " 145,\n",
+       " 188,\n",
+       " 198,\n",
+       " 150,\n",
+       " 117,\n",
+       " 189,\n",
+       " 101,\n",
+       " 184,\n",
+       " 139,\n",
+       " 198,\n",
+       " 109,\n",
+       " 102,\n",
+       " 100,\n",
+       " 159,\n",
+       " 118,\n",
+       " 111,\n",
+       " 181,\n",
+       " 165,\n",
+       " 166,\n",
+       " 118,\n",
+       " 141,\n",
+       " 183,\n",
+       " 161,\n",
+       " 196,\n",
+       " 130,\n",
+       " 169,\n",
+       " 159,\n",
+       " 161,\n",
+       " 144,\n",
+       " 140,\n",
+       " 109,\n",
+       " 153,\n",
+       " 158,\n",
+       " 122,\n",
+       " 166,\n",
+       " 111,\n",
+       " 135,\n",
+       " 145,\n",
+       " 160,\n",
+       " 182,\n",
+       " 165,\n",
+       " 151,\n",
+       " 147,\n",
+       " 121,\n",
+       " 111,\n",
+       " 100,\n",
+       " 131,\n",
+       " 115,\n",
+       " 172,\n",
+       " 187,\n",
+       " 145,\n",
+       " 178,\n",
+       " 169,\n",
+       " 134,\n",
+       " 169,\n",
+       " 160,\n",
+       " 154,\n",
+       " 176,\n",
+       " 177,\n",
+       " 123,\n",
+       " 195,\n",
+       " 154,\n",
+       " 140,\n",
+       " 150,\n",
+       " 156,\n",
+       " 197,\n",
+       " 183,\n",
+       " 128,\n",
+       " 108,\n",
+       " 115,\n",
+       " 117,\n",
+       " 161,\n",
+       " 182,\n",
+       " 188,\n",
+       " 182,\n",
+       " 112]"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "liste_aleatoire"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -646,17 +779,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "140 > 130 ? True\n",
-      "192 > 130 ? True\n",
-      "141 > 130 ? True\n",
-      "Fin car 104 < 130\n"
+      "181 > 130 ? True\n",
+      "165 > 130 ? True\n",
+      "162 > 130 ? True\n",
+      "166 > 130 ? True\n",
+      "138 > 130 ? True\n",
+      "179 > 130 ? True\n",
+      "Fin car 119 < 130\n"
      ]
     }
    ],
@@ -739,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +903,7 @@
      "output_type": "stream",
      "text": [
       "Valeurs impaires : \n",
-      "129 | 175 | 103 | 163 | 115 | 133 | 125 | 199 | 153 | 143 | 175 | 127 | 159 | 141 | 135 | 101 | 159 | 175 | 151 | 185 | 149 | 189 | 157 | 165 | 139 | 171 | 185 | 159 | 111 | 109 | 127 | 123 | 177 | 161 | 189 | 105 | 157 | 113 | 167 | 157 | 105 | 157 | 157 | 179 | 107 | 183 | 137 | 155 | 121 | 185 | 173 | 167 | 177 | 183 | 113 | "
+      "181 | 137 | 101 | 197 | 143 | 111 | 177 | 173 | 197 | 109 | 147 | 153 | 153 | 119 | 137 | 181 | 157 | 117 | 197 | 155 | 153 | 169 | 173 | 101 | 127 | 113 | 141 | 181 | 129 | 145 | 145 | 125 | 137 | 151 | 149 | 135 | 191 | 127 | 103 | 165 | 157 | 169 | 137 | 105 | 113 | 119 | 165 | 163 | 139 | 169 | 115 | 183 | 169 | "
      ]
     }
    ],
@@ -791,15 +927,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m\u001b[34m.\u001b[m\u001b[m                  \u001b[1m\u001b[34m.git\u001b[m\u001b[m               Untitled.ipynb\r\n",
-      "\u001b[1m\u001b[34m..\u001b[m\u001b[m                 \u001b[1m\u001b[34m.ipynb_checkpoints\u001b[m\u001b[m td1.ipynb\r\n"
+      "\u001b[33m.\u001b[m\u001b[m                             20190906_IBO2_td_1.ipynb\r\n",
+      "\u001b[33m..\u001b[m\u001b[m                            20190906_td_python_IBO3.ipynb\r\n",
+      ".DS_Store                     TD2_webscrapping.ipynb\r\n",
+      ".Rapp.history                 Untitled.ipynb\r\n",
+      "\u001b[33m.git\u001b[m\u001b[m                          td1.ipynb\r\n",
+      "\u001b[33m.ipynb_checkpoints\u001b[m\u001b[m\r\n"
      ]
     }
    ],
@@ -809,15 +949,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "origin\thttps://github.com/romainjouin/esilv_5a.git (fetch)\r\n",
-      "origin\thttps://github.com/romainjouin/esilv_5a.git (push)\r\n"
+      "rm: Untitled.ipynb: No such file or directory\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!rm Untitled.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20190906_IBO2_td_1.ipynb      TD2_webscrapping.ipynb\r\n",
+      "20190906_td_python_IBO3.ipynb td1.ipynb\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "origin\thttps://github.com/imahamat/esilv_5a.git (fetch)\r\n",
+      "origin\thttps://github.com/imahamat/esilv_5a.git (push)\r\n"
      ]
     }
    ],
@@ -3042,7 +3217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
